Fixed layout issues by adding xs class

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -85,6 +85,13 @@
 
 }
 
+@media (min-width: 455px) {
+
+    #my-image {
+        width: 160px;
+    }
+
+}
 
 @media (max-width: 768px) {
     .colDesktop {
